fix misalignment for logo and content page

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,5 +1,4 @@
 .header {
-    --padding-x: 20px;
     --z-header: 10;
     --header-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
     --header-gap: 8px;
@@ -12,7 +11,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    padding: 10px var(--padding-x);
+    padding: 10px var(--page-gutter);
     background: #fff;
     z-index: var(--z-header);
     box-shadow: var(--header-shadow);
@@ -21,8 +20,6 @@
 
 .logo {
     display: block;
-    width: 47px;
-    height: 64px;
 }
 
 .searchContainer {
