--- a/src/css/content-page.module.css
+++ b/src/css/content-page.module.css
@@ -2,14 +2,8 @@
     width: 100%;
     max-width: 960px;
     margin: 150px auto 80px;
+    padding: 0 var(--page-gutter);
     box-sizing: border-box;
-}
-
-@media (max-width: 480px) {
-    .contentPage {
-        width: 100%;
-        padding: 0 20px;
-    }
 }
 
 .contentPage section {
