--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,7 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
     display: none;
 }
+
+:root {
+    --page-gutter: 20px;
+}
